        System: improved display of IDD country codes in phone number entry field
        System: fixed SQL errors in the User Status Check & Fix CLI script
        System: fixed Google OAuth not correctly handling empty refresh tokens
        Attendance: fixed non-attendance classes showing up in Set Future Absence
        Finance: fixed HTML being removed from notes on invoices
        System Admin: fixed HTML being stripped out of the privacy policy
        System Admin: fixed error message when exec function does not exist
        Tracking: fixed the Chart.js library on the Graphing page

v23.0.01
--------

    Significant Changes
        System: activated the es_DO Español - República Dominicana locale

    Tweaks & Additions
        System Admin: added an import for School Year Terms
        System Admin: improved the reliability of the uploads folder check
        System Admin: improved login logs to include login method and user id

    Bug Fixes
        System: fixed string replacements with {} placeholders not working
        System Admin: fixed invalid password field in user imports in Import From File
        System Admin: fixed custom field headings not working for non-english locales
        System Admin: fixed blank User column for logins listed in View Logs
        Students: fixed student ID not working on main page of student profile

v23.0.00
--------
    Headlines
        Added support for Microsoft SSO and OAuth2-standard SSO
        Added support for database-driven sessions and encrypted session data
        Improved payment gateway including Stripe payment support
        Refactored the installer and improved install error handling

    Security
        System: important improvements to sanitization and encoding of input data

    Significant Changes
        System: improved session timeout when using multiple tabs or windows
        System: added ability to run CLI scripts remotely, with secure key